--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ python-docx>=1.2.0
 sqlalchemy>=2.0.44
 pydantic>=2.12.3
 chromadb>=1.3.0
-passlib[bcrypt]>=1.7.4
+passlib>=1.7.4
+argon2-cffi>=23.1.0
+cffi>=1.15.1
 python-jose[cryptography]>=3.5.0
 email-validator>=2.3.0
 psycopg2-binary>=2.9.11
